--- a/springboot-demo1/src/main/resources/application.properties
+++ b/springboot-demo1/src/main/resources/application.properties
@@ -1,9 +1,33 @@
 #=========================mysql config=======================
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/walker_test?useUnicode=true&characterEncoding=utf-8&useSSL=true
-spring.datasource.username=root
-spring.datasource.password=walker
-
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/walker_test?useUnicode=true&characterEncoding=utf-8&useSSL=true
+#spring.datasource.username=root
+#spring.datasource.password=walker
+spring.datasource.default-choice=master
+spring.datasource.data-source-map.master.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.data-source-map.master.jdbc-url=jdbc:mysql://localhost:3306/middleoffice?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+spring.datasource.data-source-map.master.username=root
+spring.datasource.data-source-map.master.password=walker
+spring.datasource.data-source-map.master.connection-test-query=SELECT 1
+spring.datasource.data-source-map.master.pool-name=master
+spring.datasource.data-source-map.master.minimum-idle=5
+spring.datasource.data-source-map.master.maximum-pool-size=50
+spring.datasource.data-source-map.master.idle-timeout=30000
+spring.datasource.data-source-map.master.max-lifetime=1800000
+# slave db config
+spring.datasource.data-source-map.slave.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.data-source-map.slave.jdbc-url=jdbc:mysql://localhost:3306/walker_test?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
+spring.datasource.data-source-map.slave.username=root
+spring.datasource.data-source-map.slave.password=walker
+spring.datasource.data-source-map.slave.connection-test-query=SELECT 1
+spring.datasource.data-source-map.slave.pool-name=slave
+spring.datasource.data-source-map.slave.minimum-idle=5
+spring.datasource.data-source-map.slave.maximum-pool-size=50
+spring.datasource.data-source-map.slave.idle-timeout=30000
+spring.datasource.data-source-map.slave.max-lifetime=1800000
 #=========================mybatis mappers config=======================
 mybatis.config-locations=classpath:mybatis/mybatis-config.xml
-mybatis.mapperLocations=classpath:mappers/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+# mybatis 输出log
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+server.port=8090
