--- a/springboot-demo1/pom.xml
+++ b/springboot-demo1/pom.xml
@@ -55,6 +55,19 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- lombok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
 		<!--热部署 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
