--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.walker</groupId>
-  <artifactId>springboot-learning</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.walker</groupId>
+    <artifactId>springboot-learning</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <modules>
-    <module>springboot-demo1</module>
-    <module>springboot-kafka</module>
-    <module>spring-cloud-eureka</module>
-    <module>spring-cloud-eureka-producer</module>
-    <module>spring-cloud-eureka-consumer</module>
-    <module>spring-cloud-feign</module>
-    <module>spring-cloud-hystrix</module>
-    <module>spring-cloud-hystrix-dashboard</module>
-    <module>spring-cloud-hystrix-dashboard-node2</module>
-    <module>spring-cloud-hystrix-turbine</module>
-    <module>spring-cloud-config-git-server</module>
-    <module>spring-cloud-config-git-client</module>
-    <module>spring-cloud-config-bus</module>
-    <module>spring-cloud-zuul</module>
-    <module>spring-cloud-zipkin-server</module>
-    <module>springboot-rabbitmq</module>
-    <module>spring-cloud-dubbo</module>
-    <module>springboot-graceful-shutdown</module>
-  </modules>
+    <modules>
+        <module>springboot-demo1</module>
+        <module>springboot-kafka</module>
+        <module>spring-cloud-eureka</module>
+        <module>spring-cloud-eureka-producer</module>
+        <module>spring-cloud-eureka-consumer</module>
+        <module>spring-cloud-feign</module>
+        <module>spring-cloud-hystrix</module>
+        <module>spring-cloud-hystrix-dashboard</module>
+        <module>spring-cloud-hystrix-dashboard-node2</module>
+        <module>spring-cloud-hystrix-turbine</module>
+        <module>spring-cloud-config-git-server</module>
+        <module>spring-cloud-config-git-client</module>
+        <module>spring-cloud-config-bus</module>
+        <module>spring-cloud-zuul</module>
+        <module>spring-cloud-zipkin-server</module>
+        <module>springboot-rabbitmq</module>
+        <module>spring-cloud-dubbo</module>
+        <module>springboot-graceful-shutdown</module>
+        <module>springboot-dubbo-api</module>
+        <module>springboot-dubbo-provider</module>
+        <module>springboot-dubbo-consumer</module>
+    </modules>
 
-  <name>springboot-learning Maven Webapp</name>
+    <name>springboot-learning Maven Webapp</name>
 
-  <dependencies>
+    <dependencies>
 
-    <!-- json核心模块-->
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>1.2.46</version>
-    </dependency>
+        <!-- json核心模块-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.46</version>
+        </dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
