--- a/springboot-dubbo-provider/src/main/resources/application.properties
+++ b/springboot-dubbo-provider/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8082
 spring.application.name=springboot-dubbo-provider
 #dubbo config
-dubbo.registry.address=nacos://81.68.245.25:8848
+dubbo.registry.address=nacos://10.120.10.202:8848
 dubbo.application.name=springboot-dubbo-provider
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
+dubbo.protocol.serialization=kryo
