更新nacos依赖，统一使用alibaba starter

--- a/springboot-dubbo-provider/src/main/resources/application.properties
+++ b/springboot-dubbo-provider/src/main/resources/application.properties
@@ -5,4 +5,6 @@ dubbo.registry.address=nacos://10.120.10.202:8848
 dubbo.application.name=springboot-dubbo-provider
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
-dubbo.protocol.serialization=kryo
+#dubbo.protocol.serialization=kryo
+#nacos config
+spring.cloud.nacos.discovery.server-addr=10.120.10.202:8848
