--- a/springboot-dubbo-consumer/pom.xml
+++ b/springboot-dubbo-consumer/pom.xml
@@ -18,7 +18,7 @@
         <java.version>1.8</java.version>
         <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
         <dubbo.version>2.7.3</dubbo.version>
-        <nacos.client.version>0.6.1</nacos.client.version>
+        <nacos.client.version>1.4.0</nacos.client.version>
         <dubbo.registry.nacos.version>0.0.2</dubbo.registry.nacos.version>
     </properties>
 
@@ -53,11 +53,24 @@
             <artifactId>dubbo-registry-nacos</artifactId>
             <version>${dubbo.registry.nacos.version}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>nacos-client</artifactId>
             <version>${nacos.client.version}</version>
-        </dependency>
+        </dependency>-->
+        <!-- Dubbo dependency -->
+        <!--<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>[latest version]</version>
+        </dependency>-->
+
+        <!-- 使用Spring装配方式时可选: -->
+        <!--<dependency>
+            <groupId>com.alibaba.spring</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>[latest version]</version>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -68,10 +81,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>-->
-        <!--<dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
