dubbo consumer config modify

--- a/springboot-dubbo-consumer/src/main/resources/application.properties
+++ b/springboot-dubbo-consumer/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 server.port=8083
 spring.application.name=springboot-dubbo-consumer
 #dubbo config
-dubbo.registry.address=nacos://10.120.10.202:8848
+#dubbo.registry.address=nacos://10.120.10.239:8848
+dubbo.registry.address=zookeeper://10.120.10.239:2181
 dubbo.application.name=springboot-dubbo-consumer
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
 #dubbo.protocol.serialization=kryo
 #nacos config
-spring.cloud.nacos.discovery.server-addr=10.120.10.202:8848
+#spring.cloud.nacos.discovery.server-addr=10.120.10.239:8848
+#dubbo.monitor.address=127.0.0.1:8080
+#dubbo.consumer.check=false
+dubbo.metadata-report.address=zookeeper://10.120.10.239:2181
+dubbo.consumer.filter=metrics
+dubbo.metrics.protocol=dubbo
+dubbo.metrics.port=20880
+dubbo.consumer.group=dubbo
+# dubbo.monitor.protocol=registry
