dubbo provider config modify

--- a/springboot-dubbo-provider/src/main/resources/application.properties
+++ b/springboot-dubbo-provider/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 server.port=8082
 spring.application.name=springboot-dubbo-provider
 #dubbo config
-dubbo.registry.address=nacos://10.120.10.202:8848
+#dubbo.registry.address=nacos://10.120.10.239:8848
+dubbo.registry.address=zookeeper://10.120.10.239:2181
 dubbo.application.name=springboot-dubbo-provider
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
-#dubbo.protocol.serialization=kryo
+dubbo.provider.threadname=provider
+dubbo.provider.threadpool=fixed
+dubbo.provider.threads=200
+dubbo.provider.queues=200
+dubbo.metadata-report.address=zookeeper://10.120.10.239:2181
+#refer:https://github.com/apache/dubbo/issues/4827
+dubbo.provider.filter=metrics
+dubbo.metrics.protocol=dubbo
+dubbo.metrics.port=20880
+dubbo.provider.group=dubbo
 #nacos config
-spring.cloud.nacos.discovery.server-addr=10.120.10.202:8848
+#spring.cloud.nacos.discovery.server-addr=10.120.10.239:8848
